--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <title>QR Code para LinkedIn</title>
   <style>
 
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
@@ -74,26 +70,26 @@
       text-align: center;
       margin-top: auto;
       padding-bottom: 15px;
-
     }
 
     .attribution a { 
-      color: hsl(228, 45%, 44%);
+      color: #2C7DFA;
    }
 
   </style>
 </head>
+
 <body>
   <div class="container">
     <div class="card">
-      <img src="images/image-qr-code.png" alt="QRCODE" width="300" height="300">
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <img src="images/qr-code-linkedin.png" alt="QRCODE" width="300" height="300">
+      <h1>Gostou desse projeto? Me chame no LinkedIn!</h1>
+      <p>Podemos agendar um momento para bater um papo. Posso te contar sobre minhas habilidades e experiências.</p>
     </div>
     
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">lari-coder</a>.
+      Coded by <a href="https://github.com/lari-coder" target="_blank">lari-coder</a>.
     </div>
   </div>
 </body>
