Correção de propriedade
O elemento container estava encolhendo com o tamanho da tela e o texto ficava para fora. Alterei o código na linha 36 de height para min-height, permite que aumente o tamanho mas não diminua.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     .container {
-      height: 45vh;
+      min-height: 45vh; /* Não permite o container encolher quando o tamanho da tela diminui */ 
       width: 350px;
       background-color: var(--cor1);
       border-radius: 25px;
